[tool.poetry]
name = "project1-romanov-mikhail-m25-555"
version = "0.1.0"
description = ""
authors = ["Mikhail Romanov <miroshama@gmail.com>"]
readme = "README.md"
packages = [
 { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
